# Agentic_AI_Project_3---UdaPlay-AI-Research-Agent

./: .gitignore  README.md  Udaplay_01_starter_project.ipynb  Udaplay_02_starter_project.ipynb  config.env.example  pyproject.toml
lib/: llm.py
