[project]
name = "agentic-ai-project-3-udaplay-ai-research-agent-for-video-game-industry"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.4",
    "ipykernel>=7.3.0",
    "nbclient>=0.11.0",
    "openai>=1.60.0",
    "pdfplumber>=0.11.10",
    "tavily-python>=0.5.4",
]
